-
Bug
-
Resolution: Done
-
P2: Important
-
5.5.0, 5.8.0, 5.12.1
-
None
-
20314e67f66f9bee74438a00cde17922bd2da18a (qt/qtwayland/dev)
Animated cursors are not working in Qt applications on --platform wayland.
For example the following qml file should use the animated wait cursor when hovering the text:
import QtQuick 2.1; import QtQuick.Layouts 1.1; Item { width: 200 height: 200 GridLayout { anchors.fill: parent Text { text: "Wait" MouseArea { anchors.fill: parent cursorShape: Qt.WaitCursor } } } }
On platform xcb the cursor is animated, on wayland it's just a static version. I tested with weston (1.8) and KWin (Plasma 5.5 dev branch). Running the test as an X11 application through XWayland in KWin results in an animated cursor.
Grepping through the code shows that neither wl_cursor_frame nor wl_cursor_frame_and_duration are used.
For Gerrit Dashboard: QTBUG-48181 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
254654,5 | Client: Add support for animated cursors | dev | qt/qtwayland | Status: MERGED | -2 | 0 |