abstract_backend.h
@@ -40,8 +40,6 @@ public:
     virtual ~AbstractBackend();
 
     virtual void init() = 0;
-    virtual void installCursorFromServer();
-    virtual void installCursorImage(Qt::CursorShape shape);
     virtual Screens *createScreens(QObject *parent = nullptr);
     virtual OpenGLBackend *createOpenGLBackend();
     virtual QPainterBackend *createQPainterBackend();
@@ -78,12 +76,8 @@ public:
     bool usesSoftwareCursor() const {
         return m_softWareCursor;
     }
-    QImage softwareCursor() const {
-        return m_cursor.image;
-    }
-    QPoint softwareCursorHotspot() const {
-        return m_cursor.hotspot;
-    }
+    QImage softwareCursor() const;
+    QPoint softwareCursorHotspot() const;
     void markCursorAsRendered();
 
     bool handlesOutputs() const {
@@ -143,8 +137,6 @@ Q_SIGNALS:
 protected:
     explicit AbstractBackend(QObject *parent = nullptr);
     void setSoftWareCursor(bool set);
-    void updateCursorFromServer();
-    void updateCursorImage(Qt::CursorShape shape);
     void handleOutputs() {
         m_handlesOutputs = true;
     }
@@ -162,14 +154,10 @@ protected:
 
 private:
     void triggerCursorRepaint();
-    void installThemeCursor(quint32 id, const QPoint &hotspot);
     bool m_softWareCursor = false;
     struct {
-        QPoint hotspot;
-        QImage image;
         QPoint lastRenderedPosition;
     } m_cursor;
-    WaylandCursorTheme *m_cursorTheme = nullptr;
     bool m_handlesOutputs = false;
     bool m_ready = false;
     QSize m_initialWindowSize;
