pointer_input.cpp
@@ -19,20 +19,29 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
 *********************************************************************/
 #include "pointer_input.h"
 #include "abstract_backend.h"
+#include "effects.h"
 #include "screens.h"
 #include "shell_client.h"
+#include "wayland_cursor_theme.h"
 #include "wayland_server.h"
 #include "workspace.h"
 #include "decorations/decoratedclient.h"
 // KDecoration
 #include <KDecoration2/Decoration>
 // KWayland
+#include <KWayland/Client/connection_thread.h>
+#include <KWayland/Client/buffer.h>
+#include <KWayland/Server/buffer_interface.h>
+#include <KWayland/Server/display.h>
 #include <KWayland/Server/seat_interface.h>
+#include <KWayland/Server/surface_interface.h>
 // screenlocker
 #include <KScreenLocker/KsldApp>
 
 #include <QHoverEvent>
 #include <QWindow>
+// Wayland
+#include <wayland-cursor.h>
 
 #include <linux/input.h>
 
@@ -100,6 +109,7 @@ static bool screenContainsPos(const QPointF &pos)
 PointerInputRedirection::PointerInputRedirection(InputRedirection* parent)
     : QObject(parent)
     , m_input(parent)
+    , m_cursor(nullptr)
     , m_supportsWarping(Application::usesLibinput())
 {
 }
@@ -109,7 +119,10 @@ PointerInputRedirection::~PointerInputRedirection() = default;
 void PointerInputRedirection::init()
 {
     Q_ASSERT(!m_inited);
+    m_cursor = new CursorImage(this);
     m_inited = true;
+    connect(m_cursor, &CursorImage::changed, waylandServer()->backend(), &AbstractBackend::cursorChanged);
+    emit m_cursor->changed();
     connect(workspace(), &Workspace::stackingOrderChanged, this, &PointerInputRedirection::update);
     connect(screens(), &Screens::changed, this, &PointerInputRedirection::updateAfterScreenChange);
     connect(ScreenLocker::KSldApp::self(), &ScreenLocker::KSldApp::lockStateChanged, this, &PointerInputRedirection::update);
@@ -219,6 +232,9 @@ void PointerInputRedirection::update()
     if (m_decoration || m_internalWindow) {
         t = nullptr;
     }
+    if (m_decoration != oldDeco) {
+        emit decorationChanged();
+    }
     auto oldWindow = m_window;
     if (!oldWindow.isNull() && t == m_window.data()) {
         return;
@@ -231,11 +247,6 @@ void PointerInputRedirection::update()
         }
         disconnect(m_windowGeometryConnection);
         m_windowGeometryConnection = QMetaObject::Connection();
-        if (auto p = seat->focusedPointer()) {
-            if (auto c = p->cursor()) {
-                disconnect(c, &KWayland::Server::Cursor::changed, waylandServer()->backend(), &AbstractBackend::installCursorFromServer);
-            }
-        }
     }
     if (AbstractClient *c = qobject_cast<AbstractClient*>(t)) {
         // only send enter if it wasn't on deco for the same client before
@@ -263,12 +274,6 @@ void PointerInputRedirection::update()
                 seat->setFocusedPointerSurfaceTransformation(m_window.data()->inputTransformation());
             }
         );
-        waylandServer()->backend()->installCursorFromServer();
-        if (auto p = seat->focusedPointer()) {
-            if (auto c = p->cursor()) {
-                connect(c, &KWayland::Server::Cursor::changed, waylandServer()->backend(), &AbstractBackend::installCursorFromServer);
-            }
-        }
     } else {
         seat->setFocusedPointerSurface(nullptr);
         t = nullptr;
@@ -372,9 +377,6 @@ void PointerInputRedirection::updateDecoration(Toplevel *t)
         // send leave
         QHoverEvent event(QEvent::HoverLeave, QPointF(), QPointF());
         QCoreApplication::instance()->sendEvent(oldDeco->decoration(), &event);
-        if (!m_decoration) {
-            waylandServer()->backend()->installCursorImage(Qt::ArrowCursor);
-        }
     }
     if (m_decoration) {
         if (m_decoration->client() != oldWindow) {
@@ -385,7 +387,6 @@ void PointerInputRedirection::updateDecoration(Toplevel *t)
         QHoverEvent event(QEvent::HoverMove, p, p);
         QCoreApplication::instance()->sendEvent(m_decoration->decoration(), &event);
         m_decoration->client()->processDecorationMove();
-        installCursorFromDecoration();
     }
 }
 
@@ -445,14 +446,6 @@ bool PointerInputRedirection::supportsWarping() const
     return false;
 }
 
-void PointerInputRedirection::installCursorFromDecoration()
-{
-    if (!m_inited || !m_decoration) {
-        return;
-    }
-    waylandServer()->backend()->installCursorImage(m_decoration->client()->cursor());
-}
-
 void PointerInputRedirection::updateAfterScreenChange()
 {
     if (!m_inited) {
@@ -466,6 +459,288 @@ void PointerInputRedirection::updateAfterScreenChange()
     const QPointF pos = screens()->geometry(screens()->number(m_pos.toPoint())).center();
     // TODO: better way to get timestamps
     processMotion(pos, waylandServer()->seat()->timestamp());
+}
+
+QImage PointerInputRedirection::cursorImage() const
+{
+    if (!m_inited) {
+        return QImage();
+    }
+    return m_cursor->image();
+}
+
+QPoint PointerInputRedirection::cursorHotSpot() const
+{
+    if (!m_inited) {
+        return QPoint();
+    }
+    return m_cursor->hotSpot();
+}
+
+void PointerInputRedirection::markCursorAsRendered()
+{
+    if (!m_inited) {
+        return;
+    }
+    m_cursor->markAsRendered();
+}
+
+void PointerInputRedirection::setEffectsOverrideCursor(Qt::CursorShape shape)
+{
+    if (!m_inited) {
+        return;
+    }
+    m_cursor->setEffectsOverrideCursor(shape);
+}
+
+void PointerInputRedirection::removeEffectsOverrideCursor()
+{
+    if (!m_inited) {
+        return;
+    }
+    m_cursor->removeEffectsOverrideCursor();
+}
+
+CursorImage::CursorImage(PointerInputRedirection *parent)
+    : QObject(parent)
+    , m_pointer(parent)
+{
+    connect(waylandServer()->seat(), &KWayland::Server::SeatInterface::focusedPointerChanged, this, &CursorImage::update);
+    connect(ScreenLocker::KSldApp::self(), &ScreenLocker::KSldApp::lockStateChanged, this, &CursorImage::reevaluteSource);
+    connect(m_pointer, &PointerInputRedirection::decorationChanged, this, &CursorImage::updateDecoration);
+    loadThemeCursor(Qt::ArrowCursor, &m_fallbackCursor);
+    m_surfaceRenderedTimer.start();
+}
+
+CursorImage::~CursorImage() = default;
+
+void CursorImage::markAsRendered()
+{
+    if (m_currentSource != CursorSource::LockScreen && m_currentSource != CursorSource::PointerSurface) {
+        return;
+    }
+    auto p = waylandServer()->seat()->focusedPointer();
+    if (!p) {
+        return;
+    }
+    auto c = p->cursor();
+    if (!c) {
+        return;
+    }
+    auto cursorSurface = c->surface();
+    if (cursorSurface.isNull()) {
+        return;
+    }
+    cursorSurface->frameRendered(m_surfaceRenderedTimer.elapsed());
+}
+
+void CursorImage::update()
+{
+    using namespace KWayland::Server;
+    disconnect(m_serverCursor.connection);
+    auto p = waylandServer()->seat()->focusedPointer();
+    if (p) {
+        m_serverCursor.connection = connect(p, &PointerInterface::cursorChanged, this, &CursorImage::updateServerCursor);
+    } else {
+        m_serverCursor.connection = QMetaObject::Connection();
+    }
+    updateServerCursor();
+}
+
+void CursorImage::updateDecoration()
+{
+    disconnect(m_decorationConnection);
+    auto deco = m_pointer->decoration();
+    AbstractClient *c = deco.isNull() ? nullptr : deco->client();
+    if (c) {
+        m_decorationConnection = connect(c, &AbstractClient::moveResizeCursorChanged, this, &CursorImage::updateDecorationCursor);
+    } else {
+        m_decorationConnection = QMetaObject::Connection();
+    }
+    updateDecorationCursor();
+}
+
+void CursorImage::updateDecorationCursor()
+{
+    m_decorationCursor.image = QImage();
+    m_decorationCursor.hotSpot = QPoint();
+
+    auto deco = m_pointer->decoration();
+    if (AbstractClient *c = deco.isNull() ? nullptr : deco->client()) {
+        loadThemeCursor(c->cursor(), &m_decorationCursor);
+        if (m_currentSource == CursorSource::Decoration) {
+            emit changed();
+        }
+    }
+    reevaluteSource();
+}
+
+void CursorImage::updateServerCursor()
+{
+    m_serverCursor.image = QImage();
+    m_serverCursor.hotSpot = QPoint();
+    reevaluteSource();
+    const bool needsEmit = m_currentSource == CursorSource::LockScreen || m_currentSource == CursorSource::PointerSurface;
+    auto p = waylandServer()->seat()->focusedPointer();
+    if (!p) {
+        if (needsEmit) {
+            emit changed();
+        }
+        return;
+    }
+    auto c = p->cursor();
+    if (!c) {
+        if (needsEmit) {
+            emit changed();
+        }
+        return;
+    }
+    auto cursorSurface = c->surface();
+    if (cursorSurface.isNull()) {
+        if (needsEmit) {
+            emit changed();
+        }
+        return;
+    }
+    auto buffer = cursorSurface.data()->buffer();
+    if (!buffer) {
+        if (needsEmit) {
+            emit changed();
+        }
+        return;
+    }
+    m_serverCursor.hotSpot = c->hotspot();
+    m_serverCursor.image = buffer->data().copy();
+    if (needsEmit) {
+        emit changed();
+    }
+}
+
+void CursorImage::loadTheme()
+{
+    if (m_cursorTheme) {
+        return;
+    }
+    // check whether we can create it
+    if (waylandServer()->internalShmPool()) {
+        m_cursorTheme = new WaylandCursorTheme(waylandServer()->internalShmPool(), this);
+        connect(waylandServer(), &WaylandServer::terminatingInternalClientConnection, this,
+            [this] {
+                delete m_cursorTheme;
+                m_cursorTheme = nullptr;
+            }
+        );
+    }
+}
+
+void CursorImage::setEffectsOverrideCursor(Qt::CursorShape shape)
+{
+    loadThemeCursor(shape, &m_effectsCursor);
+    if (m_currentSource == CursorSource::EffectsOverride) {
+        emit changed();
+    }
+    reevaluteSource();
+}
+
+void CursorImage::removeEffectsOverrideCursor()
+{
+    reevaluteSource();
+}
+
+void CursorImage::loadThemeCursor(Qt::CursorShape shape, Image *image)
+{
+    loadTheme();
+    if (!m_cursorTheme) {
+        return;
+    }
+    auto it = m_cursors.constFind(shape);
+    if (it == m_cursors.constEnd()) {
+        image->image = QImage();
+        image->hotSpot = QPoint();
+        wl_cursor_image *cursor = m_cursorTheme->get(shape);
+        if (!cursor) {
+            return;
+        }
+        wl_buffer *b = wl_cursor_image_get_buffer(cursor);
+        if (!b) {
+            return;
+        }
+        waylandServer()->internalClientConection()->flush();
+        waylandServer()->dispatch();
+        auto buffer = KWayland::Server::BufferInterface::get(waylandServer()->internalConnection()->getResource(KWayland::Client::Buffer::getId(b)));
+        if (!buffer) {
+            return;
+        }
+        it = decltype(it)(m_cursors.insert(shape, {buffer->data().copy(), QPoint(cursor->hotspot_x, cursor->hotspot_y)}));
+    }
+    image->hotSpot = it.value().hotSpot;
+    image->image = it.value().image;
+}
+
+void CursorImage::reevaluteSource()
+{
+    if (waylandServer()->isScreenLocked()) {
+        setSource(CursorSource::LockScreen);
+        return;
+    }
+    if (effects && static_cast<EffectsHandlerImpl*>(effects)->isMouseInterception()) {
+        setSource(CursorSource::EffectsOverride);
+        return;
+    }
+    if (!m_pointer->decoration().isNull()) {
+        setSource(CursorSource::Decoration);
+        return;
+    }
+    if (!m_pointer->window().isNull()) {
+        setSource(CursorSource::PointerSurface);
+        return;
+    }
+    setSource(CursorSource::Fallback);
+}
+
+void CursorImage::setSource(CursorSource source)
+{
+    if (m_currentSource == source) {
+        return;
+    }
+    m_currentSource = source;
+    emit changed();
+}
+
+QImage CursorImage::image() const
+{
+    switch (m_currentSource) {
+    case CursorSource::EffectsOverride:
+        return m_effectsCursor.image;
+    case CursorSource::LockScreen:
+    case CursorSource::PointerSurface:
+        // lockscreen also uses server cursor image
+        return m_serverCursor.image;
+    case CursorSource::Decoration:
+        return m_decorationCursor.image;
+    case CursorSource::Fallback:
+        return m_fallbackCursor.image;
+    default:
+        Q_UNREACHABLE();
+    }
+}
+
+QPoint CursorImage::hotSpot() const
+{
+    switch (m_currentSource) {
+    case CursorSource::EffectsOverride:
+        return m_effectsCursor.hotSpot;
+    case CursorSource::LockScreen:
+    case CursorSource::PointerSurface:
+        // lockscreen also uses server cursor image
+        return m_serverCursor.hotSpot;
+    case CursorSource::Decoration:
+        return m_decorationCursor.hotSpot;
+    case CursorSource::Fallback:
+        return m_fallbackCursor.hotSpot;
+    default:
+        Q_UNREACHABLE();
+    }
 }
 
 }
